# cdt-math

./: .gitignore  Cargo.toml  README.md  desktop.ini
.github/markdownlint/: markdownlint.yaml
.github/workflows/: coverage.sh
docs/: beginning_plan_issues.md  catalogsPurchasedEquipment.xlsx  descriptionDesignCalculationSingleGingerOverheadCrane.md  descriptionDesignCalculationSingleGingerSupportCrane.md
src/: main.rs
src/algorithm/: mod.rs
src/algorithm/bearing_choose/: bearing.rs  mod.rs
src/algorithm/bearing_filter/: bearing_filter.rs  mod.rs
src/algorithm/cable_count/: cable_count.rs  mod.rs
src/algorithm/constants/: common.rs  mod.rs
src/algorithm/context/: context.rs  context_access.rs  context_write.rs  ctx_result.rs  mod.rs  testing_ctx.rs
src/algorithm/do_first/: mod.rs
src/algorithm/do_multiple/: mod.rs
src/algorithm/do_second/: mod.rs
src/algorithm/dynamic_coefficient/: dynamic_coefficient.rs  dynamic_coefficient_ctx.rs  mod.rs
src/algorithm/efficiency_of_the_polyspast/: efficiency_of_the_polyspast.rs  mod.rs
src/algorithm/effort_in_the_rope/: effort_in_the_rope.rs  mod.rs
src/algorithm/entities/: bearing.rs  bet_phi.rs  crane_work_area_type.rs  driver_type.rs  hook.rs  lifting_class.rs  loading_combination.rs  mechanism_work_type.rs  mod.rs  winding_type.rs
src/algorithm/force_of_gravity/: force_of_gravity.rs  mod.rs
src/app/: app.rs
src/kernel/: eval.rs  link.rs  mod.rs  request.rs  request_as.rs  request_async.rs  request_async_fn.rs  request_sync.rs  run.rs
src/service/: math_service.rs  math_service_conf.rs  mod.rs
(+276 files in other folders)
