[package]
name = "cdt-math"
version = "0.1.0"
edition = "2021"

[dependencies]
#
# Logging
log = "^0.4"
env_logger = "^0.11"
#
# Internal deps
testing = { git = "https://github.com/a-givertzman/rust-testing.git" }
# testing = { git = "https://github.com/a-givertzman/rust-testing.git", tag = "0.1.2" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.0.1" }
api-tools = { git = "https://github.com/a-givertzman/rust-api-tools.git", tag = "0.2.0" }
sal-sync = { git = "https://github.com/a-givertzman/rust-sal-sync.git", tag = "0.0.3" }
#
# Serde
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
#
# Regex
regex = "^1.10"
#
# Hash
rustc-hash = "^2.1"
#
# Collections
indexmap = "^2.7"
#
# Async runtime engin
tokio = { version = "1", features = ["full"] }
futures = "^0.3"
